--- a/_config.yml
+++ b/_config.yml
@@ -27,13 +27,16 @@ description: >- # this means to ignore newlines until "baseurl:"
 domain: lds-17.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://lds-17.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: l_17 # jekyllrb
+github_username: l_17
 
 # Build settings
-theme: minima
+# theme: minima
+# plugins:
+#  - jekyll-feed
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
