--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,13 @@ twitter_username: l_17 # jekyllrb
 github_username: l_17
 
 # Build settings
-# theme: minima
-# plugins:
-#  - jekyll-feed
-remote_theme: pages-themes/cayman@v0.2.0
+theme: minima
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
+# remote_theme: pages-themes/cayman@v0.2.0
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
